# c-unit-test-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1  coverage.ps1  rename-library.ps1
cmake/: README.md  toolchain-mingw.cmake
include/mylib/: math_utils.h
src/: math_utils.c
test/: CMakeLists.txt
test/unit/: test_math_utils.c
